--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,17 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+
+    buildFeatures{
+        dataBinding true
+    }
+
 
     defaultConfig {
         applicationId "com.jeongs.workplan"
@@ -50,4 +56,24 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    //navigation
+    def nav_version = "2.3.3"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    //noinspection GradleDependency
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    //room Database
+    def room_version = "2.2.6"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    //코루틴
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    //recycleview
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.android.support:design:30.0.0'
+    //TabLayout 인터페이스 리팩터링
+    implementation "com.google.android.material:material:1.1.0-beta01"
+    //viewpager2
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
