UI업데이트 calendarview를 통해 데이터 입력받기(준비중)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,8 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0-beta01"
     //viewpager2
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    //range calendar
+    implementation 'com.archit.calendar:awesome-calendar:2.0.0'
+
+
 }
